Layout bug fix.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -82,6 +82,7 @@
             }
             .my-audio-timer {
                 position: static;
+                background: white;
             }
             height: calc(100% - 59px - 20%)
         }
